# MiniECS

./: CMakeLists.txt  README.md
Benchmarks/Source/: Main.cpp
ECS/Source/: ECS.cpp  ECS.h
PerformanceTestVsEntt/Source/: Main.cpp
Sample/Source/: Main.cpp
Tests/Source/: ecs_archetype_tests.cpp  ecs_component_tests.cpp  ecs_entity_tests.cpp  ecs_get_component_tests.cpp  ecs_signature_tests.cpp  ecs_test_common.h  ecs_view_tests.cpp  ecs_view_with_exclude.cpp  main.cpp
